added cart modal to all pages

--- a/index.html
+++ b/index.html
@@ -57,17 +57,12 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#chefs">Chefs</a>
+              </li>           
+              <li class="nav-item">
+                <a class="nav-link text-white" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item">
-              </li>
-              
-              <li class="nav-item">
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="checkout.html">Checkout</a>
@@ -101,7 +96,7 @@
                         <div class="input-group-prepend">
                           <!-- <span class="input-group-text" id="inputGroup-sizing-lg"></span> -->
                         </div>
-                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+                        <input type="number" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                       </div>
                   </div>
                   <div class="col-1"><h2>$20</h2></div>
@@ -117,7 +112,7 @@
                         <div class="input-group-prepend">
                           <!-- <span class="input-group-text" id="inputGroup-sizing-lg"></span> -->
                         </div>
-                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+                        <input type="number" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                       </div>
                   </div>
                   <div class="col-1"><h2>$20</h2></div>
