--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="modal-body">
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-2 py-3"> <img src="https://picsum.photos/200" alt="" height="75px" width="auto"> </div>
-                  <div class="col-md-4 text-left align-baseline fs-2">product 1</div>
+                  <div class="col-md-4 text-left align-baseline fs-2">Product 1</div>
                   <div class="col-1"><h2>$20</h2></div>
                   <div class="col-md-3">
                       <div class="input-group input-group-lg">
@@ -105,7 +105,7 @@
 
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-2 py-3"> <img src="https://picsum.photos/200" alt="" height="75px" width="auto"> </div>
-                  <div class="col-md-4 text-left align-baseline fs-2">product 1</div>
+                  <div class="col-md-4 text-left align-baseline fs-2">Product 1</div>
                   <div class="col-1"><h2>$20</h2></div>
                   <div class="col-md-3">
                       <div class="input-group input-group-lg">
