changed branding icon color

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     
   <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4"></i>Take a Break</a>
+    <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4 fs-2 text-primary"></i>Take a Break</a>
      <div class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </div>
@@ -105,7 +105,7 @@
 
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-2 py-3"> <img src="https://picsum.photos/200" alt="" height="75px" width="auto"> </div>
-                  <div class="col-md-4 text-left align-baseline fs-2">Product 1</div>
+                  <div class="col-md-4 text-left fs-2">Product 1</div>
                   <div class="col-1"><h2>$20</h2></div>
                   <div class="col-md-3">
                       <div class="input-group input-group-lg">
