--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link text-white" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#chefs">Chefs</a>
+                <a class="nav-link text-white" href="#chefs">Team</a>
               </li>           
               <li class="nav-item">
                 <a class="nav-link text-white" href="about.html">About</a>
@@ -66,8 +66,10 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="checkout.html">Checkout</a>
-              <li>
-                 <button type="button" class="btn fs-3 nav-item"><i class="bi bi-cart nav-link text-white" data-bs-toggle="modal" data-bs-target="#cart"></i></button>
+              <li class="nav-item">
+                 <!-- <button type="button" class="btn fs-4 nav-item"> -->
+                  <i class="bi bi-cart nav-link text-white fs-5" data-bs-toggle="modal" data-bs-target="#cart"></i>
+                <!-- </button> -->
               <!-- nav bar cart button with modal trigger -->    
               </li>
             </ul>
@@ -115,13 +117,13 @@
                   <div class="col-md-3">
                       <div class="input-group input-group-lg">
                         <div class="input-group-prepend">
-                          <!-- <span class="input-group-text" id="inputGroup-sizing-lg"></span> -->
+
                         </div>
-<<<<<<< Updated upstream
+
                         <input type="number" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
-=======
-                        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
->>>>>>> Stashed changes
+
+                        
+
                       </div>
                   </div>
                   <div class="col-1"><h2>$20</h2></div>
@@ -172,14 +174,14 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/Melon-smoothie-med-banan-maelk-og-yoghurt.jpg" class="d-block w-100" alt="">
+            <img src="img/Melon-smoothie-med-banan-maelk-og-yoghurt.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/coffee_blackeye.jpg" class="d-block w-100" alt="">
+            <img src="img/coffee_blackeye.jpg" class="d-block w-100 carousel-img" alt="">
 
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
@@ -208,7 +210,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/Pili-Manila-Grill.jpg" class="d-block w-100" alt="">
+            <img src="img/Pili-Manila-Grill.jpg" class="d-block w-100 carousel-img" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <!-- <h5>Slide Label</h5>
                 <p>Caption</p> -->
