added for team cards

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 <div class="col-md-4 card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                       <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
-                      <div class="image2"><img src="chefs/chefs-1.jpg" class="img-fluid"/></div>
+                      <div class="image2"><img src="img/melvin.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
@@ -678,7 +678,7 @@
                     <h5 class="card-title fs-3 fw-bold">Melvin</h5>
                     <span class="card-text">Group Lead. Responsible in coding and creating the structure of this website and providing the guidance to members.</span>
                     </div>
-                    <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div>
+                    <!-- <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
 
                 <div class="col-md-4 card">
@@ -694,7 +694,7 @@
                     <h5 class="card-title fs-3 fw-bold">Vanessa</h5>
                     <span class="card-text">Group Member. Initiated the theme for the website. Responsible in coding and creating the contact and aboutpages.</span>
                     </div>
-                    <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div>
+                    <!-- <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
 
                 <div class="col-md-4 card">
@@ -710,7 +710,7 @@
                     <h5 class="card-title fs-3 fw-bold">Enerio</h5>
                     <span class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to display different products.</span>
                     </div>
-                    <div class="card-footer"> <a href="#!" class="btn btn-primary">PROFILE</a></div>
+                    <!-- <div class="card-footer"> <a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
                 <!-- end of card -->
 
