updated Vanessa's bg

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                 <div class="col-md-4 card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <!-- <img src="chefs/chefs-2.jpg" class="img-fluid"/> -->
-                      <div class="image1"><img src="img/HalohaloFiesta.jfif" class="img-fluid"/></div>
+                      <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
                       <div class="image2"><img src="chefs/chefs-2.jpg" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
