--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     
   <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4 fs-2 text-primary"></i>Take a Break</a>
+    <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4 fs-2 text-white"></i>Take a Break</a>
      <div class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </div>
