--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-2 py-3"> <img src="https://picsum.photos/200" alt="" height="75px" width="auto"> </div>
                   <div class="col-md-4 text-left align-baseline fs-2">Product 1</div>
-                  <div class="col-1"><h2>$20</h2></div>
+                  <div class="col-1"><h2>₱ 200</h2></div>
                   <div class="col-md-3">
                       <div class="input-group input-group-lg">
                         <div class="input-group-prepend">
@@ -115,7 +115,7 @@
                         <input type="number" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                       </div>
                   </div>
-                  <div class="col-1"><h2>$20</h2></div>
+                  <div class="col-1"><h2>₱ 400</h2></div>
                   <div class="col-md-1"><i class="bi bi-x-square fs-3 text-right"></i></div>
                 </div>
                 
@@ -126,7 +126,7 @@
                   <div class="col-md-3">
                       
                   </div>
-                  <div class="col-1"><h2>$40</h2></div>
+                  <div class="col-1"><h2>₱ 400</h2></div>
                   <div class="col-md-1"></div>
                 </div>
 
