--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                 <br>
     <!-- card after why choose -->
 
-  <div class="container">
-        <div class="row">
-            <div class="card col-md-4 gx-5">
+  <div class="container-fluid">
+        <div class="row flex-row justify-content-evenly">
+            <div class="card col-md-4 mw-400">
                     <div class="card-body ">
                       <div class="row flex-row flex-wrap">
                         <div class="d-flex imgWidth">
@@ -262,7 +262,7 @@
                           <img class="w-100 py-2" src="img/coffee_blackcoffee200px.png" alt="">
                         </div>
                       </div>
-                      <h5 class="card-title fs-3 fw-bold">Hot and Cold Coffee</h5>
+                      <h5 class="card-title fs-3 text-white fw-bold">Hot and Cold Coffee</h5>
                     <!-- <h5 class="card-title fs-2 fw-bold">01</h5> -->
                     <!-- <br> -->
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
@@ -289,7 +289,7 @@
                           <img class="w-100 py-2" src="img/Tapsilog.jfif" alt="">
                         </div>
                       </div>
-                    <h5 class="card-title fs-3 fw-bold">Filipino Breakfast</h5>
+                    <h5 class="card-title text-white fs-3 fw-bold">Filipino Breakfast</h5>
                     <!-- <br> -->
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
                     <br>
@@ -316,7 +316,7 @@
                           <img class="w-100 py-2" src="img/KiwiFruitShake200px.jpg" alt="">
                         </div>
                       </div>
-                    <h5 class="card-title fs-3 fw-bold">Juices, Smoothies, Shakes</h5>
+                    <h5 class="card-title text-white fs-3 fw-bold">Juices, Smoothies, Shakes</h5>
                     <!-- <br> -->
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
                     <br>
@@ -454,7 +454,7 @@
             <img src="img/Bangsilog.jpeg" class="modalImage">
             <p></p>
             <h3>Bangsilog</h3>
-            <p class="modalText">Mixed with seafood, topped with spring onions</p>
+            <p class="modalText">Fried marinated fish milk, fried rice with golden top egg</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
@@ -504,7 +504,7 @@
             <img src="img/Smoothie_Layersofhappiness.jfif" class="modalImage">
             <p></p>
             <h3>Layers of Happiness</h3>
-            <p class="modalText">Layers of Happiness brings the fullness of </p>
+            <p class="modalText">Layers of Happiness brings the fullness of satisfaction to your soul</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
@@ -514,7 +514,7 @@
             <img src="img/HalohaloBeatTheHeat.jfif" class="modalImage">
             <p></p>
             <h3>Halo-halo</h3>
-            <p class="modalText">Halo-halo beat the heat</p>
+            <p class="modalText">Beat the heat with this multi-layered Halohalo</p>
             <p class="modalPrice"><i class="fa-solid fa-peso-sign">30.00</i></p>
             <p><label for="ordqty">Ord Qty:</label>  <input type="number" name="ordqty" style="width:50px;" value="0"></input></p>
             <p><button>Add to Cart</button></p>
@@ -574,7 +574,7 @@
             <!-- CAFE MENU -->
 <div id="menu">
     <div class="container pt-5">
-        <h1 class="mainHeader">Check our tasty Menu</h1>
+        <h1 class="mainHeader">Check Our Tasty Menu</h1>
                 <br>
             <div class="text-center">   
                 <button type="button" class="btn btn-primary rounded-pill">SHOW ALL</button>
@@ -599,7 +599,7 @@
                 <div class="col-md-6">
                     <div class="row">    
                         <div class="col-6"><h4>Mocha Cafe</h4></div>
-                        <div class="col-6"><h3 class="text-end">₱ 180</h3></div>
+                        <div class="col-6"><h3 class="text-end">₱ 180.00</h3></div>
                     </div>   
                     <div class="col-12"><p>A mixture of espresso, milk, chocolate syrup, whipped cream and choco shavings</p></div>
                 </div>  
@@ -669,8 +669,8 @@
     </div>
             <br>
         <!-- Team cards -->
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row justify-content-evenly">
                 <div class="col-md-4 card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                       <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
@@ -713,7 +713,7 @@
                     </div>
                     <div class="card-body">
                     <h5 class="card-title fs-3 fw-bold">Enerio</h5>
-                    <span class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to display different products.</span>
+                    <span class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to scroll thru products and place orders.</span>
                     </div>
                     <!-- <div class="card-footer"> <a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
@@ -724,11 +724,21 @@
            
         </div>
       </div>
+      <br><br>
          <!-- end of container -->
          <br>
-         <footer class="container row ">
-            <div class="col-6 d-flex justify-content-end">
-                  <h4>Follow Us</h4>
+      <div class="container">
+         <footer class="row d-flex flex-nowrap text-center">
+            <!-- <h4>Follow Us</h4> -->
+
+            <h4>
+                <span class="px-4">Follow Us</span>
+                <i class="bi bi-facebook px-1"></i>
+                <i class="bi bi-instagram px-1"></i>
+                <i class="bi bi-twitter px-1"></i>
+                <i class="bi bi-linkedin px-1"></i>
+            </h4>
+                  <!-- <h4>Follow Us</h4>
             </div>
             <div class="col-6">
               <h4>
@@ -737,9 +747,10 @@
                   <i class="bi bi-twitter px-1"></i>
                   <i class="bi bi-linkedin px-1"></i>
                   <!-- <i class="bi bi-strava px-1"></i> -->
-              </h4>
+              </h4> -->
             </div>
          </footer>
+        </div>
     <script src="js/bootstrap.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
