change text color for card title in Team Card

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <!-- <br> -->
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
                     <br>
-                    <span class="card-text">From Fruit Shakes, smoothies and Juice to Halo-halo and cocktails to Iced Tea and Coca-cola; 
+                    <span class="card-text">From Fruit Shakes, smoothies and Juices to Halo-halo, cocktails and more,
                       you can have them all to brigthen up your day. </span>
                 </div>
                 <div class="card-footer">
@@ -680,7 +680,7 @@
                     </a>
                     </div>
                     <div class="card-body ">
-                    <h5 class="card-title fs-3 fw-bold">Melvin</h5>
+                    <h5 class="card-title fs-3 text-white fw-bold">Melvin</h5>
                     <span class="card-text">Group Lead. Responsible in coding and creating the structure of this website and providing the guidance to members.</span>
                     </div>
                     <!-- <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div> -->
@@ -696,7 +696,7 @@
                     </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title fs-3 fw-bold">Vanessa</h5>
+                    <h5 class="card-title fs-3 text-white fw-bold">Vanessa</h5>
                     <span class="card-text">Group Member. Initiated the theme for the website. Responsible in coding and creating the contact and aboutpages.</span>
                     </div>
                     <!-- <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div> -->
@@ -712,7 +712,7 @@
                     </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title fs-3 fw-bold">Enerio</h5>
+                    <h5 class="card-title fs-3 text-white fw-bold">Enerio</h5>
                     <span class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to scroll thru products and place orders.</span>
                     </div>
                     <!-- <div class="card-footer"> <a href="#!" class="btn btn-primary">PROFILE</a></div> -->
@@ -746,7 +746,7 @@
                   <i class="bi bi-instagram px-1"></i>
                   <i class="bi bi-twitter px-1"></i>
                   <i class="bi bi-linkedin px-1"></i>
-                  <!-- <i class="bi bi-strava px-1"></i> -->
+                  <i class="bi bi-strava px-1"></i>
               </h4> -->
             </div>
          </footer>
