--- a/checkout.html
+++ b/checkout.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="style.css">
 
     
@@ -237,10 +238,21 @@
         </div>
       <!-- end of checkout card -->
 
+      <div class="container d-flex flex-wrap footerHeight">
+        <footer class="row d-flex flex-nowrap text-center ">
+           <!-- <h4>Follow Us</h4> -->
+           <p class="footerAttr ">
+               <span class="px-4">Follow Us</span>
+               <i class="bi bi-facebook px-1"></i>
+               <i class="bi bi-instagram px-1"></i>
+               <i class="bi bi-twitter px-1"></i>
+               <i class="bi bi-linkedin px-1"></i>
+           </p>    
+        </footer>
+       </div>
 
 
-
-      <footer class="container row">
+      <!-- <footer class="container row">
         <div class="col-6 d-flex justify-content-end">
               <h4>Follow us</h4>
         </div>
@@ -253,11 +265,11 @@
               <i class="bi bi-strava px-1"></i>
           </h4>
         </div>
-     </footer>
+     </footer> -->
+
+</body>
 <script src="js/bootstrap.js"></script>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
-</body>
-
 
 </html>
