--- a/index.html
+++ b/index.html
@@ -731,13 +731,13 @@
          <footer class="row d-flex flex-nowrap text-center">
             <!-- <h4>Follow Us</h4> -->
 
-            <h4>
+            <p class="footerAttr">
                 <span class="px-4">Follow Us</span>
                 <i class="bi bi-facebook px-1"></i>
                 <i class="bi bi-instagram px-1"></i>
                 <i class="bi bi-twitter px-1"></i>
                 <i class="bi bi-linkedin px-1"></i>
-            </h4>
+            </p>
                   <!-- <h4>Follow Us</h4>
             </div>
             <div class="col-6">
@@ -747,14 +747,14 @@
                   <i class="bi bi-twitter px-1"></i>
                   <i class="bi bi-linkedin px-1"></i>
                   <i class="bi bi-strava px-1"></i>
-              </h4> -->
-            </div>
+              </h4>
+            </div>-->
          </footer>
         </div>
-    <script src="js/bootstrap.js"></script>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
-</body>
 
+</body>
+<script src="js/bootstrap.js"></script>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
 
 </html>
