changes in About page - layout reduced width container-fluid to container to align text and image

--- a/about.html
+++ b/about.html
@@ -131,13 +131,13 @@
                 </div>
                   <!-- navbar cart button modal end -->
                   
-    <div class="container-fluid d-flex mt-5 pt-5">
+    <div class="container d-flex mt-5 pt-5">
       <img class="img-fluid" src="img/img1.jpg" width="1500" style="margin-left: auto; margin-right:auto">
     </div>
   
-     <div class="container-fluid fs-4 mt-5 pt-4" style="max-width: 1500px; text-align: justify;">
+     <div class="container fs-5 mt-5 pt-4 text-justify" style="max-width: 1500px;">
         <h1 class="text-center">ABOUT US</h1>
-          <p class="">
+          <p class="container">
             Take a break Cafe was established in 2001, owned by 3 people . 19 years 
             later, we’re still happily serving community with quality fresh food. Our cafe
             has grown to become one of largest and most recognized services. It’s almost as
@@ -167,9 +167,9 @@
     </div>
     </div>
   
-     <div class="container-fluid fs-4 mt-5 pt-5"  style="max-width: 1500px; text-align: justify;">
+     <div class="container fs-5 mt-5 pt-5 text-justify"  style="max-width: 1500px;">
         <h1 class="text-center">OUR BELIEFS</h1>
-          <p class="">
+          <p class="container">
             Our customers have offered us over a decade of memorable moments serving community, and so we believe
             the least we can do is continue serving them delicious dishes with a heartfelt smile. Customer service
             is a cornerstone of our business, and receiving a smile in return is what we strive for – we hope that
@@ -180,13 +180,13 @@
           </p>
     </div>
   
-    <div class="container-fluid d-flex mt-5 pt-4">
+    <div class="container d-flex mt-5 pt-4">
       <img class="img-fluid" src="img/img5.jpg" style="margin-left: auto; margin-right: auto;" width="1500">
     </div>
 
-    <div class="container-fluid fs-4 mt-5 pt-5"  style="max-width: 1500px; text-align: justify;">
+    <div class="container fs-5 mt-5 pt-5 text-justify"  style="max-width: 1500px;">
       <h1 class="text-center">OUR QUALITY</h1>
-        <p class="">
+        <p class="container">
           At Take a Break Cafe, we pride ourselves on the quality and freshness of our meals. Everything is 
           made in-house by our chefs each and every day using only the best ingredients. Our owners still
           bake and cook all of our signature food. And because we also pride ourselves on contributing
