--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="container-sm">
             <h1 class="mainHeader" id="menu">Why Choose <b>Take A Break</b> Cafe</h1>
             <br>
-            <p class="mainP d-flex justify-content-center">Take A Break Cafe prides itself for what its brand represents before our 
+            <p class="mainP d-flex justify-content-center text-justify fs-5">Take A Break Cafe prides itself for what its brand represents before our 
               valued customers.  Feeling sleepy, drained or just want to Take A Break; Whatever the circumstance,
               this is the right place for you to re-charge or ignite your day with our aromatic yet solid taste interstellar coffee brand. We also serve authentic Filipino breakfast whic are popular around the world. We also serve smoothies and juices from high-quality fresh and nutritious fruits.</p>
       </div>
@@ -316,7 +316,7 @@
                           <img class="w-100 py-2" src="img/KiwiFruitShake200px.jpg" alt="">
                         </div>
                       </div>
-                    <h5 class="card-title text-white fs-3 fw-bold">Juices, Smoothies, Shakes</h5>
+                    <h5 class="card-title text-white fs-3 fw-bold">Juices, Smoothies</h5>
                     <!-- <br> -->
                     <!-- <h6 class="card-subtitle mb-2 fs-3 fw-bold">Card subtitle</h6> -->
                     <br>
@@ -665,7 +665,7 @@
     <div class="container">
         <h1 class="mainHeader">Meet Our Team</h1>
                 <br>
-        <p class="mainP d-flex justify-content-center">Our Team belongs to Group 5. Each one has different roles and contributes in the creation and development of this website. We collaborate using GitHub to ensure changes are tracked and merged in the proper order.  </p>
+        <p class="mainP fs-5 d-flex justify-content-center text-justify">Our Team belongs to Group 5. Each one has different roles and contributes in the creation and development of this website. We collaborate using GitHub to ensure changes are tracked and merged in the proper order.  </p>
     </div>
             <br>
         <!-- Team cards -->
