spelling check in in home page

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <br>
             <p class="mainP d-flex justify-content-center text-justify fs-5">Take A Break Cafe prides itself for what its brand represents before our 
               valued customers.  Feeling sleepy, drained or just want to Take A Break; Whatever the circumstance,
-              this is the right place for you to re-charge or ignite your day with our aromatic yet solid taste interstellar coffee brand. We also serve authentic Filipino breakfast whic are popular around the world. We also serve smoothies and juices from high-quality fresh and nutritious fruits.</p>
+              this is the right place for you to re-charge or ignite your day with our aromatic yet solid taste interstellar coffee brand. We also serve authentic Filipino breakfast which is popular around the world. We also serve smoothies and juices from high-quality fresh and nutritious fruits.</p>
       </div>
                 <br>
     <!-- card after why choose -->
