added trust badges, centered the footer in checkout page

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         <h1 class="mainHeader">Check Our Tasty Menu</h1>
                 <br>
             <div class="text-center">   
-                <button type="button" class="btn btn-primary rounded-pill">SHOW ALL</button>
+                <!-- <button type="button" class="btn btn-primary rounded-pill">SHOW ALL</button> -->
                 <button type="button" class="btn btn-primary rounded-pill">STARTERS</button>
                 <button type="button" class="btn btn-primary rounded-pill">SALAD</button>
                 <button type="button" class="btn btn-primary rounded-pill">SPECIALTY</button>
