--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,7 @@
                 <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -140,7 +140,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3>Getting your order</h3>
-            <hr>
+            <hr class="border border-secondary">
           </div>
           <div class="col-md-4">
             <h3>Order Summary</h3>
@@ -222,12 +222,13 @@
                 <!--  breakdown of items in cart -->
                 <br>
               <div class="col-md-4">
-                <div class="container border border-2 border-dark" id="cart-items-info">
+                <div class="container border border-2 border-secondary" id="cart-items-info">
                    <div><h4>Shipping</h4></div>
                    <div class="d-flex justify-content-between">
                     <img src="img/Tapsilog.jfif"  style="width: 100px; height: 100px;" alt="tapsilog">
                     <p class="px-3">Tapsilog</p>
                     <h4>₱100.00</h4>
+                    
                    </div>
                   
                    <div class="d-flex justify-content-between mt-4">
@@ -235,7 +236,7 @@
                     <p class="px-3">Kiwi Smoothie</p>
                     <h4>₱125.00</h4>
                    </div>
-                    <hr>
+                    <hr class="border border-secondary">
                     <div class="d-flex justify-content-between">
                       <p>Item Subtotal</p>
                       <p>₱225.00</p>
@@ -248,7 +249,7 @@
                       <p>E-VAT</p>
                       <p>₱20</p>
                     </div>
-                    <hr>
+                    <hr class="border border-secondary">
                     <div class="d-flex justify-content-between">
                       <p class="fw-bold">Total</p>
                       <p class="fw-bold">₱245</p>
@@ -289,7 +290,7 @@
                 <i class="fs-3 fa fa-cc-discover" style="color:orange;"></i> -->
                 <br><br>
               <label class="fs-4" for="payment">Mode of Payment:</label>
-              <select  class="form-select" id="payment" name="payment">
+              <select  class="form-select btn-primary" id="payment" name="payment">
                 <option value="VISA" selected>VISA</option>
                 <option value="Mastercard">Mastercard</option>
                 <option value="American Express">American Express</option>
