added updated cart modal to all pages

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                   <!-- cart items -->
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-3 py-3"> <img src="img/Tapsilog.jfif" alt="" height="auto" width="100px"> </div>                
-                  <div class="col-md-2 text-left align-baseline my-auto">Tapsilog</div>                 
+                  <div class="col-md-2 text-left align-baseline my-auto"><h4>Tapsilog</h4></div>                 
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
                             <i class="bi bi-dash-square fs-3 my-3"></i>
                             <button class="btn btn-primary rounded my-3" type="button">0</button>
                             <i class="bi bi-plus-square fs-3 my-3"></i>
-                            <h3 class="my-3">₱100</h3>
+                            <h5 class="my-3">₱100</h5>
                             <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
                   </div>
@@ -107,14 +107,14 @@
 
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-3 py-3"> <img src="img/KiwiFruitShake.jfif" alt="" height="auto" width="100px"> </div>                
-                  <div class="col-md-2 text-left align-baseline my-auto">Kiwi Smoothie</div>                 
+                  <div class="col-md-2 text-left align-baseline my-auto"><h4>Kiwi Smoothie</h4></div>                 
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
                             <i class="bi bi-dash-square fs-3 my-3"></i>
-                            <button class="btn btn-primary btn-sm rounded mb-3" type="button">0</button>
+                            <button class="btn btn-primary rounded my-3" type="button">0</button>
                             <i class="bi bi-plus-square fs-3 my-3"></i>
-                            <h3 class="my-3">₱125</h3>
+                            <h5 class="my-3">₱125</h5>
                             <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
                   </div>
@@ -122,18 +122,11 @@
 
                 <!-- cart total -->
                 <div class="row border border-secondary mx-2">
-                  <!-- <div class="col-md-2 py-3"></div> -->
-                  <div class="col-md-6 d-flex justify-content-between fs-2"> <h2>Total</h2> </div>
-                  <!-- <div class="col-1"><h2></h2></div> -->
-                  <!-- <div class="col-md-3"> -->
-                      
-                  <!-- </div> -->
-                  <div class="col-md-6 d-flex justify-content-end pe-5 text-success"><h2 class="fs-3">₱225</h2></div>
-                  <!-- <div class="col-md-1"></div> -->
+                  <div class="col-md-6 d-flex justify-content-between"> <h3>Total</h3> </div>      
+                  <div class="col-md-6 d-flex justify-content-end pe-5 text-danger"><h5>₱225</h5></div>
                 </div>
-
-
             </div>
+                        <!-- modal buttons -->
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go Back</button>
               <button type="button" class="btn btn-primary"><a href="checkout.html">Proceed to Checkout</a></button>
