updated team section card content

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     </div>
                     <div class="card-body ">
                     <h5 class="card-title fs-3 text-white fw-bold">Melvin</h5>
-                    <span class="card-text">Group Lead. Responsible in coding and creating the structure of this website and providing the guidance to members.</span>
+                    <span class="card-text"><h4>Project Manager</h4> <p>Oversees the progress of everyone on the team, including himself. He makes sure everything is in line with the branding theme and principles.</p></span>
                     </div>
                     <!-- <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
@@ -669,14 +669,14 @@
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <!-- <img src="chefs/chefs-2.jpg" class="img-fluid"/> -->
                       <div class="image1"><img src="img/CoffeeBean2.jfif" class="img-fluid"/></div>
-                      <div class="image2"><img src="chefs/chefs-2.jpg" class="img-fluid"/></div>
+                      <div class="image2"><img src="img/Vanessa.png" class="img-fluid"/></div>
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                     </div>
                     <div class="card-body">
                     <h5 class="card-title fs-3 text-white fw-bold">Vanessa</h5>
-                    <span class="card-text">Group Member. Initiated the theme for the website. Responsible in coding and creating the contact and aboutpages.</span>
+                    <span class="card-text"><h4>Creative Manager</h4> <p>As the only woman on the team, she has the knack for aesthetics. She's the go-to person of the team for creatives.</p></span>
                     </div>
                     <!-- <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
@@ -692,7 +692,7 @@
                     </div>
                     <div class="card-body">
                     <h5 class="card-title fs-3 text-white fw-bold">Enerio</h5>
-                    <span class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to scroll thru products and place orders.</span>
+                    <span class="card-text"><h4>Content Manager</h4> <p>A man of wisdom and experience, Enerio takes responsibility in procuring and publishing relevant images and content to the website.</p></span>
                     </div>
                     <!-- <div class="card-footer"> <a href="#!" class="btn btn-primary">PROFILE</a></div> -->
                 </div>
