added anchor tag to socials and added button tags to icons in cart

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     
   <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand fs-3 fw-bold ps-4" href="#"><i class="bi bi-cup-hot-fill pe-4 fs-2 text-white"></i>Take a Break</a>
+    <a class="navbar-brand fs-3 fw-bold ps-4" href="index.html"><i class="bi bi-cup-hot-fill pe-4 fs-2 text-white"></i>Take a Break</a>
      <div class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </div>
@@ -96,9 +96,9 @@
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
-                            <i class="bi bi-dash-square fs-3 my-3"></i>
+                            <button type="button" class="btn border-0"><i class="bi bi-dash-square fs-3 my-3"></i></button>
                             <button class="btn btn-primary rounded my-3" type="button">0</button>
-                            <i class="bi bi-plus-square fs-3 my-3"></i>
+                            <button class="btn border-0"><i class="bi bi-plus-square fs-3 my-3"></i></button>
                             <h5 class="my-3">₱100</h5>
                             <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
@@ -111,9 +111,9 @@
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
-                            <i class="bi bi-dash-square fs-3 my-3"></i>
+                            <button class="btn border-0"><i class="bi bi-dash-square fs-3 my-3"></i></button>
                             <button class="btn btn-primary rounded my-3" type="button">0</button>
-                            <i class="bi bi-plus-square fs-3 my-3"></i>
+                            <button class="btn border-0"><i class="bi bi-plus-square fs-3 my-3"></i></button>
                             <h5 class="my-3">₱125</h5>
                             <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
@@ -712,10 +712,10 @@
 
             <p class="footerAttr">
                 <span class="px-4">Follow Us</span>
-                <i class="bi bi-facebook px-1"></i>
-                <i class="bi bi-instagram px-1"></i>
-                <i class="bi bi-twitter px-1"></i>
-                <i class="bi bi-linkedin px-1"></i>
+                <a href="#"><i class="btn border-0 fs-4 bi bi-facebook px-1"></i></a>
+                <i class="btn border-0 fs-4 bi bi-instagram px-1"></i>
+                <i class="btn border-0 fs-4 bi bi-twitter px-1"></i>
+                <i class="btn border-0 fs-4 bi bi-linkedin px-1"></i>
             </p>
                   <!-- <h4>Follow Us</h4>
             </div>
