added btn class to social handles

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
                             <button type="button" class="btn border-0"><i class="bi bi-dash-square fs-3 my-3"></i></button>
-                            <button class="btn btn-primary rounded my-3" type="button">0</button>
+                            <button class="btn btn-primary rounded my-3" disabled>0</button>
                             <button class="btn border-0"><i class="bi bi-plus-square fs-3 my-3"></i></button>
-                            <h5 class="my-3">₱100</h5>
-                            <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
+                            <h5 class="my-4">₱100</h5>
+                            <button class="btn border-0"><i class="bi bi-x-square fs-3 text-right my-3"></i></button>                      
                         </div>
                   </div>
                 </div>
@@ -112,10 +112,10 @@
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
                             <button class="btn border-0"><i class="bi bi-dash-square fs-3 my-3"></i></button>
-                            <button class="btn btn-primary rounded my-3" type="button">0</button>
+                            <button class="btn btn-primary rounded my-3" disabled>0</button>
                             <button class="btn border-0"><i class="bi bi-plus-square fs-3 my-3"></i></button>
-                            <h5 class="my-3">₱125</h5>
-                            <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
+                            <h5 class="my-4">₱125</h5>
+                            <button class="btn border-0"><i class="bi bi-x-square fs-3 text-right my-3"></i></button>                      
                         </div>
                   </div>
                 </div>
@@ -123,7 +123,7 @@
                 <!-- cart total -->
                 <div class="row border border-secondary mx-2">
                   <div class="col-md-6 d-flex justify-content-between"> <h3>Total</h3> </div>      
-                  <div class="col-md-6 d-flex justify-content-end pe-5 text-danger"><h5>₱225</h5></div>
+                  <div class="col-md-6 d-flex justify-content-end pe-5 text-danger cart-modal-total"><h5>₱225</h5></div>
                 </div>
             </div>
                         <!-- modal buttons -->
@@ -712,10 +712,10 @@
 
             <p class="footerAttr">
                 <span class="px-4">Follow Us</span>
-                <a href="#"><i class="btn border-0 fs-4 bi bi-facebook px-1"></i></a>
-                <i class="btn border-0 fs-4 bi bi-instagram px-1"></i>
-                <i class="btn border-0 fs-4 bi bi-twitter px-1"></i>
-                <i class="btn border-0 fs-4 bi bi-linkedin px-1"></i>
+                <i class="btn border-0 fs-5 bi bi-facebook px-1"></i>
+                <i class="btn border-0 fs-5 bi bi-instagram px-1"></i>
+                <i class="btn border-0 fs-45bi bi-twitter px-1"></i>
+                <i class="btn border-0 fs-5 bi bi-linkedin px-1"></i>
             </p>
                   <!-- <h4>Follow Us</h4>
             </div>
