--- a/about.html
+++ b/about.html
@@ -85,9 +85,9 @@
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
-                            <i class="bi bi-dash-square fs-3 my-3"></i>
+                            <i class="btn border-0 bi bi-dash-square fs-3 my-3"></i>
                             <button class="btn btn-primary rounded my-3" type="button">0</button>
-                            <i class="bi bi-plus-square fs-3 my-3"></i>
+                            <i class="btn border-0 bi bi-plus-square fs-3 my-3"></i>
                             <h5 class="my-3">₱100</h5>
                             <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
@@ -100,9 +100,9 @@
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
-                            <i class="bi bi-dash-square fs-3 my-3"></i>
+                            <i class="btn border-0 bi bi-dash-square fs-3 my-3"></i>
                             <button class="btn btn-primary rounded my-3" type="button">0</button>
-                            <i class="bi bi-plus-square fs-3 my-3"></i>
+                            <i class="btn border-0 bi bi-plus-square fs-3 my-3"></i>
                             <h5 class="my-3">₱125</h5>
                             <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
@@ -193,10 +193,10 @@
          <!-- <h4>Follow Us</h4> -->
          <p class="footerAttr">
              <span class="px-4">Follow Us</span>
-             <i class="bi bi-facebook px-1"></i>
-             <i class="bi bi-instagram px-1"></i>
-             <i class="bi bi-twitter px-1"></i>
-             <i class="bi bi-linkedin px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-facebook px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-instagram px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-twitter px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-linkedin px-1"></i>
          </p>    
       </footer>
      </div>
