--- a/checkout.html
+++ b/checkout.html
@@ -335,10 +335,10 @@
  
              <p class="footerAttr">
                  <span class="px-3">Follow Us</span>
-                 <i class="bi bi-facebook px-1"></i>
-                 <i class="bi bi-instagram px-1"></i>
-                 <i class="bi bi-twitter px-1"></i>
-                 <i class="bi bi-linkedin px-1"></i>
+                 <i class="btn border-0 fs-5 bi bi-facebook px-1"></i>
+                 <i class="btn border-0 fs-5 bi bi-instagram px-1"></i>
+                 <i class="btn border-0 fs-5 bi bi-twitter px-1"></i>
+                 <i class="btn border-0 fs-5 bi bi-linkedin px-1"></i>
              </p>
                    <!-- <h4>Follow Us</h4>
              </div>
