--- a/contact.html
+++ b/contact.html
@@ -192,10 +192,10 @@
          <!-- <h4>Follow Us</h4> -->
          <p class="footerAttr">
              <span class="px-4">Follow Us</span>
-             <i class="bi bi-facebook px-1"></i>
-             <i class="bi bi-instagram px-1"></i>
-             <i class="bi bi-twitter px-1"></i>
-             <i class="bi bi-linkedin px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-facebook px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-instagram px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-twitter px-1"></i>
+             <i class="btn border-0 fs-5 bi bi-linkedin px-1"></i>
          </p>    
       </footer>
      </div>
