updated cart buttons for all pages

--- a/about.html
+++ b/about.html
@@ -86,10 +86,10 @@
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
                             <i class="btn border-0 bi bi-dash-square fs-3 my-3"></i>
-                            <button class="btn btn-primary rounded my-3" type="button">0</button>
+                            <button class="btn btn-primary rounded my-3" type="button" disabled>0</button>
                             <i class="btn border-0 bi bi-plus-square fs-3 my-3"></i>
-                            <h5 class="my-3">₱100</h5>
-                            <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
+                            <h5 class="my-4">₱100</h5>
+                            <i class="btn border-0 bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
                   </div>
                 </div>
@@ -101,10 +101,10 @@
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
                             <i class="btn border-0 bi bi-dash-square fs-3 my-3"></i>
-                            <button class="btn btn-primary rounded my-3" type="button">0</button>
+                            <button class="btn btn-primary rounded my-3" type="button" disabled>0</button>
                             <i class="btn border-0 bi bi-plus-square fs-3 my-3"></i>
-                            <h5 class="my-3">₱125</h5>
-                            <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
+                            <h5 class="my-4">₱125</h5>
+                            <i class="btn border-0 bi bi-x-square fs-3 text-right my-3"></i>                      
                         </div>
                   </div>
                 </div>
