--- a/checkout.html
+++ b/checkout.html
@@ -84,11 +84,11 @@
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
-                            <i class="bi bi-dash-square fs-3 my-3"></i>
-                            <button class="btn btn-primary rounded my-3" type="button">0</button>
-                            <i class="bi bi-plus-square fs-3 my-3"></i>
-                            <h5 class="my-3">₱100</h5>
-                            <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
+                            <button class="btn border-0"><i class="bi bi-dash-square fs-3 my-3"></i></button>
+                            <button class="btn btn-primary rounded my-3"  disabled>0</button>
+                            <button class="btn border-0"><i class="bi bi-plus-square fs-3 my-3"></i></button>
+                            <h5 class="my-4">₱100</h5>
+                            <button class="btn border-0"><i class="bi bi-x-square fs-3 text-right my-3"></i></button>                      
                         </div>
                   </div>
                 </div>
@@ -99,11 +99,11 @@
                   <div class="col-md-7 my-auto">                      
                         <div class="input-group input-group-lg d-flex justify-content-between my-auto">
                           <div class="input-group-prepend"></div>
-                            <i class="bi bi-dash-square fs-3 my-3"></i>
-                            <button class="btn btn-primary rounded my-3" type="button">0</button>
-                            <i class="bi bi-plus-square fs-3 my-3"></i>
-                            <h5 class="my-3">₱125</h5>
-                            <i class="bi bi-x-square fs-3 text-right my-3"></i>                      
+                            <button class="btn border-0"><i class="bi bi-dash-square fs-3 my-3"></i></button>
+                            <button class="btn btn-primary rounded my-3" type="button" disabled>0</button>
+                            <button class="btn border-0"><i class="bi bi-plus-square fs-3 my-3"></i></button>
+                            <h5 class="my-4">₱125</h5>
+                            <button class="btn border-0"><i class="bi bi-x-square fs-3 text-right my-3"></i></button>                      
                         </div>
                   </div>
                 </div>
